Specialize the Redis string storage

--- a/dist.ini
+++ b/dist.ini
@@ -21,12 +21,14 @@ tag_format = %N-%v%{-TRIAL}t
 [PkgVersion]
 
 [Prereqs]
-Carp = 0
-JSON = 0
 Algorithm::ConsistentHash::Ketama = 0
-Test::More = 0.88
+Carp = 0
 Data::Dumper = 0
-Moose = 0
-Redis = 0
 DBI = 0
 DBD::mysql = 0
+JSON = 0
+List::Util = 0
+Moose = 0
+parent = 0
+Redis = 0
+Test::More = 0.88
