--- a/dist.ini
+++ b/dist.ini
@@ -6,8 +6,8 @@ copyright_holder = Steffen Mueller
 
 
 [MetaResources]
-repository.web  = http://github.com/tsee/ShardedKV
-repository.url  = http://github.com/tsee/ShardedKV
+repository.web  = http://github.com/tsee/p5-ShardedKV
+repository.url  = http://github.com/tsee/p5-ShardedKV
 repository.type = git
 
 [Git::Check]
