--- a/dist.ini
+++ b/dist.ini
@@ -1,9 +1,10 @@
 name    = ShardedKV
 version = 0.01
 author  = Steffen Mueller <smueller@cpan.org>
+author  = Nick Perez <nperez@cpan.org>
 license = Perl_5
 copyright_holder = Steffen Mueller
-
+copyright_year = 2012
 
 [MetaResources]
 repository.web  = http://github.com/tsee/p5-ShardedKV
