--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = ShardedKV
-version = 0.01
+version = 0.02
 author  = Steffen Mueller <smueller@cpan.org>
 author  = Nick Perez <nperez@cpan.org>
 license = Perl_5
@@ -11,15 +11,19 @@ repository.web  = http://github.com/tsee/p5-ShardedKV
 repository.url  = http://github.com/tsee/p5-ShardedKV
 repository.type = git
 
+[MetaJSON]
+[PodSyntaxTests]
+[@Basic]
+[PkgVersion]
+[PodWeaver]
+
+[NextRelease]
+
 [Git::Check]
 [Git::Commit]
 [Git::Tag]
 tag_format = %N-%v%{-TRIAL}t
 
-[@Basic]
-[MetaJSON]
-[PodSyntaxTests]
-[PkgVersion]
 
 [Prereqs]
 Algorithm::ConsistentHash::Ketama = 0
